# ESP32Calc

./: BOM_calculator.xlsx  README.md  calc_netlist.tel
.deprecated/.Firmware_deprecated/: .gitignore  diagram.json  platformio.ini  wokwi.toml
.deprecated/.Firmware_deprecated/src/: main.cpp
.deprecated/.Firmware_deprecated_alt/: .gitignore  .ignoredList.md  CMakeLists.txt  diagram.json  platformio.ini
.deprecated/.Firmware_deprecated_alt/docs/: architecture.md
.deprecated/.Firmware_deprecated_alt/src/: CMakeLists.txt  main.cpp
.deprecated/.Firmware_deprecated_alt/src/core/: calc_math.cpp  calc_math.h  keypad.cpp  keypad.h  screen.h
.deprecated/.Firmware_deprecated_alt/src/display/: gui.cpp  gui.h
.deprecated/.Firmware_deprecated_alt/src/hal/: battery.cpp  battery.h  pins.h
.deprecated/.Firmware_deprecated_alt/src/raylib/include/: raylib_canvas.h  raylib_config.h
.deprecated/.Firmware_deprecated_alt/src/raylib/src/: raylib_canvas.c
.deprecated/.Firmware_deprecated_alt/src/screens/: about_screen.cpp  about_screen.h  battery_screen.cpp  battery_screen.h  calc_screen.cpp  calc_screen.h  menu_system.cpp  menu_system.h  settings_screen.cpp  settings_screen.h
.deprecated/Firmware/: .gitignore  BUILD_C_MODULES.md  boot.py  build.sh  diagram.json  flash.sh  main.py  platformio.ini  pyrightconfig.json  wokwi.toml
.deprecated/Firmware/config/: display.py  keys.py  layout.py  pins.py
.deprecated/Firmware/core/: calc_math.py  scheduler.py  settings.py
.deprecated/Firmware/display/: profile.py
.deprecated/Firmware/drivers/: epaper.py  framebuf.py  keypad.py
.firmware_deprecated/: .gitignore  .ignoredList.md  README.md  diagram.json  sdkconfig.defaults  wokwi.toml
.firmware_deprecated/docs/: ARCHITECTURE.md  MATH_ENGINE.md
.firmware_deprecated/src/: app_config.h  app_events.h
.firmware_deprecated/tools/: screen_color_probe_config.json
BOM/CSV/: BOM_calculator.csv  BOM_power.csv
BOM/XLSX/: BOM_calculator.xlsx  BOM_power.xlsx
CAD/STEP/: button.step  front_panel.step  main_body.step  midplate_button_holder.step
Firmware/: .ignoredList.md  README.md  compile_commands.json  diagram.json  partitions.csv  platformio.ini  weact_213_bw.chip.c  weact_213_bw.chip.json  weact_213_bw.chip.wasm  wokwi.toml
Firmware/bundle/: index.json
Firmware/docs/: ARCHITECTURE.md  WEACT_RUST_DRIVER_COMPARISON.md
Firmware/src/: CMakeLists.txt  app_config.h  app_events.h  app_log.cpp  app_log.h  calc_math.cpp  calc_math.h  gui.cpp  gui.h  idf_component.yml  keymap.cpp  keypad_matrix.cpp  keypad_matrix.h  main.cpp
Firmware/src/battery/: battery_monitor.cpp
Firmware/src/calc/: calc_engine.cpp  calc_engine.h
Firmware/src/display/: weact_213_bw.cpp  weact_213_bw.h
Firmware/src/graphics/: mono_canvas.cpp  mono_canvas.h  raylib_epaper_port.cpp  raylib_epaper_port.h
Firmware/src/hardware/: keymap.cpp  keymap.h
Firmware/src/programs/: program_loader.cpp  program_loader.h
Firmware/src/storage/: sd_storage.cpp
Firmware/src/ui/: menu.cpp  menu.h
Firmware/src/ui/modes/: files_mode.cpp  graph_mode.cpp  matrix_mode.cpp  mode_common.cpp  mode_common.h  mode_registry.cpp  mode_registry.h  programs_mode.cpp  settings_mode.cpp  standard_mode.cpp  symbolic_mode.cpp  ui_mode.h  wireless_mode.cpp
Firmware/src/wireless/: wireless_service.cpp
Firmware/tools/: README.md  screen_color_probe.py  screen_color_probe_config.json
NeoCalculator_inspiration/: CMakeLists.txt  README.md  diagram.json  platformio.ini
NeoCalculator_inspiration/docs/: MEMORY_POLICY.md  NEOCALC_PIVOT.md  TARGET_STRUCTURE.md
NeoCalculator_inspiration/src/: CMakeLists.txt  app_config.h  app_events.h
NeoCalculator_inspiration/src/battery/: battery_monitor.cpp  battery_monitor.h
NeoCalculator_inspiration/src/graphics/: mono_canvas.h
NeoCalculator_inspiration/src/hardware/: keymap.cpp  keymap.h  keypad_matrix.cpp
NeoCalculator_inspiration/src/math/: math_engine.cpp  math_engine.h  math_service.cpp  math_service.h
NeoCalculator_inspiration/src/math/input/: expression_classifier.h
NeoCalculator_inspiration/src/math/legacy/: symbolic_engine.cpp  symbolic_engine.h
NeoCalculator_inspiration/src/math/solve/: linear_solver.cpp
NeoCalculator_inspiration/src/ui/: input_behavior.h  menu.cpp
XcasFW/: .gitignore  CMakeLists.txt  README.md  build_wokwi.sh  flasher_args.json  partitions.csv  platformio.ini  sdkconfig.defaults  wokwi.toml
XcasFW/components/giac/: CMakeLists.txt  library.json
XcasFW/components/giac/src/: config.h  console.h  debug.h  first.h  giacPCH.h  global.h  gmp_replacements.h  identificateur.h  input_lexer.h  k_csdk.h  kdisplay.cc  keypadc.h  kgausspol.cc  kglobal.cc  kifactor.cc  kmaple.cc  kmisc.cc  kmodfactor.cc  kmodpoly.cc  kplot.cc  kprog.cc  ksubst.cc  kthreaded.cc  main.h  monomial.h  platform_stubs.cpp  poly.h  textGUI.h
XcasFW/components/giac/src/sys/: rtc.h
XcasFW/docs/: MEMORY_POLICY.md  NEOCALC_PIVOT.md  TARGET_STRUCTURE.md
XcasFW/scenarios/: keypad-press-only.yaml  solve-linear.yaml
XcasFW/src/: CMakeLists.txt  app_config.h  main.cpp
XcasFW/src/deprecated/math/solve/: linear_solver.cpp  linear_solver.h
XcasFW/src/deprecated/ui/: graph_expression.cpp  graph_expression.h
XcasFW/src/display/: weact_213_bw.cpp  weact_213_bw.h
XcasFW/src/graphics/: mono_canvas.cpp
XcasFW/src/hardware/: keypad_matrix.cpp  keypad_matrix.h  pins.h
XcasFW/src/math/: math_engine.cpp  math_engine.h  math_service.cpp  math_service.h  types.h
XcasFW/src/math/core/: numeric_eval.cpp  numeric_eval.h  rational_eval.cpp  rational_eval.h
XcasFW/src/math/giac/: giac_bridge.cpp  giac_bridge.h
XcasFW/src/math/input/: expression_classifier.cpp
XcasFW/src/math/solve/: linear_solver.h  solve_result_formatter.cpp  solve_result_formatter.h
XcasFW/src/ui/: graph_expression.cpp  graph_expression.h  menu.cpp  menu.h  menu_constants.cpp  menu_constants.h  menu_detail.cpp  menu_detail.h  menu_graph.cpp  menu_integrals.cpp  menu_integrals.h  menu_standard.cpp
board_files/power_board_pcb/: PowerPickAndPlace.xlsx
calculator_pcb/: CalculatorPickAndPlace.xlsx
website/: index.html
(+69 files in other folders)
