idf_component_register(
  SRCS
    "main.cpp"
    "hardware/keymap.cpp"
    "hardware/keypad_matrix.cpp"
    "display/weact_213_bw.cpp"
    "graphics/mono_canvas.cpp"
    "battery/battery_monitor.cpp"
    "storage/sd_storage.cpp"
    "calc/calc_engine.cpp"
    "programs/program_loader.cpp"
    "wireless/wireless_service.cpp"
    "ui/menu.cpp"
    "ui/modes/mode_common.cpp"
    "ui/modes/mode_registry.cpp"
    "ui/modes/standard_mode.cpp"
    "ui/modes/graph_mode.cpp"
    "ui/modes/symbolic_mode.cpp"
    "ui/modes/programs_mode.cpp"
    "ui/modes/files_mode.cpp"
    "ui/modes/wireless_mode.cpp"
    "ui/modes/settings_mode.cpp"
  INCLUDE_DIRS
    "."
    "display"
    "graphics"
    "battery"
    "storage"
    "calc"
    "programs"
    "wireless"
    "ui"
    "ui/modes"
    "hardware"
  REQUIRES
    esp_lcd
)
